=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.0
 - Fixed: [ 2947598 ] Site Map missing the $SERVER_URLvar? (fisharebest)
 - Changed: Behaviour of autocomplete for INDI fields, input of an id grabs only the exact id and extends by a further digit, makes it much faster for large gedcoms (volschin)
 - Fixed: [ 2945678 ] [6910] Add new child/autocomplete (fisharebest)
 - Update: jQuery 1.4.1 (volschin)
 - Fixed: [ 2938600 ] 4.2.3 indi Map tab: no map & Java error (wooc)
 - Fixed: [ 2943837 ] Placenames in Edit Interface in latest PGV (fisharebest)
 - Fixed: [ 2943263 ] Logout ERROR 2 (fisharebest)
 - Added: modules.css file for all themes (windmillway)
 - Fixed: [ 2939710 ] [6841?] Startup error (fisharebest)
 - Fixed: [ 2937064 ] Upgrade from 4.2.3 loses users/accounts (fisharebest)
 - Changed: Default sorting by lastname in user administration (volschin) 
 - Fixed: Sorting by username in user administration (volschin) 
 - Added: [ 1717787 ] Gedcomname.gedpgv_counters.txt in backup (fisharebest)
 - Added: [ 2677563 ] Counters in MySQL rather than in file. (fisharebest)
 - Fixed: [ 2928619 ] Burial w/o Death -> (on the date of death) (fisharebest)
 - Fixed: [ 1859794 ] individual titles (i.e. husband,wife) on Close relatives tab (fisharebest)
 - Fixed: [ 2934003 ] Pictures of other gedcom in Multimedia list (canajun2eh)
 - Changed: Fan chart font and colors moved from style.css to theme.php (canajun2eh)
 - Fixed: [ 2917682 ] ERROR 8 in access log (wooc)
 - Update: jQuery.autocomplete plugin 1.1 (volschin)
 - Update: TCPDF 4.8.024 (volschin)
 - Fixed: Include change of favorites in merge of records (volschin)
 - Fixed: [ 2933020 ] 4.2.3 Bracketing issue in Russian (wooc)
 - Fixed: [ 2931733 } 4.2.3 Name entering and editing (fisharebest)